---------------------------------------------------------------------------
Version 1.15.0 (RGer), 2007-07-??
---------------------------------------------------------------------------
Version 1.14.2 (RGer), 2007-07-03
** this release fixes all known nits with IPv6 **
- restored capability to do /etc/service lookup for "syslog"
  service when -r 0 was given
- documented IPv6 handling of syslog messages
- integrate patch from Bartosz Kuźma to make rsyslog compile under
  Solaris again (the patch replaced a strndup() call, which is not
  available under Solaris
- improved debug logging when waiting on select
- updated rsyslogd man page with new options (-46A)
---------------------------------------------------------------------------
Version 1.14.1 (RGer/Peter Vrabec), 2007-06-29
- added Peter Vrabec's patch for IPv6 TCP
- prefixed all messages send to stderr in rsyslogd with "rsyslogd: "
---------------------------------------------------------------------------
Version 1.14.0 (RGer/Peter Vrabec), 2007-06-28
- Peter Vrabec provided IPv6 for rsyslog, so we are now IPv6 enabled
  IPv6 Support is currently for UDP only, TCP is to come soon.
  AllowedSender configuration does not yet work for IPv6.
- fixed code in iovCreate() that broke C's strict aliasing rules 
- fixed some char/unsigned char differences that forced the compiler
  to spit out warning messages
- updated the Red Hat init script to fix a known issue (thanks to
  Peter Vrabec)
---------------------------------------------------------------------------
Version 1.13.5 (RGer), 2007-06-22
- made the TCP session limit configurable via command line switch
  now -t <port>,<max sessions>
- added man page for rklogd(8) (basically a copy from klogd, but now
  there is one...)
- fixed a bug that caused internal messages (e.g. rsyslogd startup) to
  appear without a tag.
- removed a minor memory leak that occurred when TAG processing requalified
  a HOSTNAME to be a TAG (and a TAG already was set).